# Programing

./: .clang-format  .gitignore  CMakeLists.txt
Google_tests/: CMakeLists.txt
RGZ/: CMakeLists.txt  Doxyfile  Makefile
RGZ/assets/: input.txt
RGZ/doc/: RGZ.docx  ~$RGZ.docx
RGZ/src/: controller.cpp  controller.h  list.cpp  list.h  main.cpp  menu.cpp  menu.h  watch.cpp  watch.h
RGZ/test/: test.cpp
lab01/doc/: Programing-ZOZULIA.docx
lab02/: .Makefile.swp  ProgramingZozuliaLab02.docx
lab02/src/: lib.c  lib.h
lab02/test/: test.c
lab03/: .Makefile.swp  Makefile  README.md
lab03/doc/: Lab03.docx
lab04/: README.md
lab04/doc/: Lab04.docx
lab05/: Makefile  README.md
lab05/doc/: lab05.docx
lab06/: Makefile  README.md
lab06/doc/: lab06.docx
lab07/: Doxyfile  Makefile
lab07/doc/: Lab07.md
lab08/: Doxyfile  README.md
lab08/doc/: Lab08.md
lab09/: Makefile
lab09/doc/: Lab09.md
lab10/doc/: Lab10.md  lab10.docx
lab11/: Doxyfile  Makefile
lab11/doc/: Lab11.md
lab12/: Doxyfile
lab12/assets/: input.txt
lab12/doc/: lab12.md
lab12/src/: lib.c  lib.h  main.c
lab13/: Doxyfile  Makefile  README.md
lab13/doc/: Lab13.md
lab14/: Doxyfile  Makefile  README.md
lab14/assets/: input.txt
lab14/doc/: lab14.md
lab14/src/: lib.c  lib.h  main.c
lab15/: Doxyfile
lab15/assets/: input.txt
lab15/doc/: lab15.md
lab15/src/: lib.c  lib.h  main.c
lab17/: Makefile
lab17/doc/: lab17.md
lab17/src/: lib.c  lib.h  main.c
lab17/test/: test.c
lab18/: Doxyfile
lab18/assets/: input.txt
lab18/doc/: lab18.md
lab18/src/: lib.c  lib.h  main.c
lab18/test/: test.c
lab19/: Doxyfile
lab19/doc/: lab19.md
lab19/src/: data.c  data.h  list.c  list.h  main.c
lab19/test/: test.c
lab20/: Doxyfile  Makefile  a.out
lab20/doc/: lab20.md
lab20/src/: data.c  data.h  list.c  list.h  main.c
lab20/test/: debug.c  debug.h  test.c
lab21/libdynamic/: Makefile
lab21/libstatic/: Makefile
lab21/usedynamic/: Makefile
lab21/usestatic/: Makefile
lab22/: Doxyfile  Makefile
lab22/doc/: lab22.md
lab22/src/: data.c  data.h  list.c  list.h  main.c
lab22/test/: test.c
lab23/: CMakeLists.txt  Doxyfile  Makefile
lab23/doc/: lab23.md
lab23/src/: list.cpp  list.h  main.cpp  watch.cpp  watch.h
lab23/test/: test.cpp
lab24/: CMakeLists.txt  Doxyfile
lab24/assets/: input.txt
lab24/doc/: lab24.md
lab24/src/: list.cpp  list.h  main.cpp  main.cppy  watch.cpp  watch.h
lab25/: CMakeLists.txt  Doxyfile  Makefile
lab25/assets/: input.txt
lab25/doc/: lab25.md
lab25/src/: list.cpp  list.h  main.cpp  watch.cpp  watch.h
lab25/test/: test.cpp
lab26/: CMakeLists.txt  Doxyfile
lab26/assets/: input.txt
lab26/doc/: lab26.md
lab26/src/: list.cpp  list.h  main.cpp  watch.cpp  watch.h
lab26/test/: test.cpp
lab27/: CMakeLists.txt  Doxyfile  Makefile
lab27/doc/: lab27.md
lab27/src/: list.cpp  list.h  main.cpp  watch.cpp  watch.h
lab27/test/: test.cpp
lab28/: CMakeLists.txt
lab28/doc/: lab28.md
lab28/src/: list.cpp  list.h  main.cpp
lab28/test/: test.cpp
lab29/: CMakeLists.txt
lab29/doc/: lab29.md
lab29/src/: list.cpp  list.hpp  main.cpp  watch.cpp  watch.h
lab29/test/: test.cpp
lab30/: CMakeLists.txt  Doxyfile  Makefile
lab30/doc/: lab30.md
lab30/src/: data.cpp  data.h  list.cpp  list.h  main.cpp  (+2 more)
(+92 files in other folders)
